--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: Build Site
 # run-name: ${{ github.actor }} is learning GitHub Actions
 on: 
     workflow_dispatch:
