--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,8 +29,8 @@ jobs:
         run: cd .github && ./build.fish ${{inputs.reponame}}
       - name: Push to github pages
         run: |
-          git config --global user.name ${{secrets.username}} 
-          git config --global user.email ${{secrets.email}}
+          git config --global user.name ${{secrets.USERNAME}} 
+          git config --global user.email ${{secrets.EMAIL}}
           cp -r .github/site/* .
           git add .
           git commit -m "site (automated)"
