--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
         reponame:
           description: 'Subroute of repo to build'
           required: false
-          default: 'all'
+          default: 'animalfarm'
           type: string
           
 
@@ -37,10 +37,6 @@ jobs:
           git config --global user.email brohithkr@gmail.com
           cp -r .github/site/* .
           git status
-          if git diff --quiet; then
-            echo "No changes to commit"
-          else
-            git add .
-            git commit -m "site (automated)"
-            # git push
-          fi
+          git add .
+          git commit -m "site (automated)"
+          git push
